--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   # shipper
   filebeat1:
-    image: docker.elastic.co/beats/filebeat:6.6.1
+    image: docker.elastic.co/beats/filebeat:7.7.0
     volumes:
       - ./cfg/filebeat1.yml:/usr/share/filebeat/filebeat.yml:ro
       - ./log1:/log
@@ -37,7 +37,7 @@ services:
 
   # shipper
   filebeat2:
-    image: docker.elastic.co/beats/filebeat:6.6.1
+    image: docker.elastic.co/beats/filebeat:7.7.0
     volumes:
       - ./cfg/filebeat2.yml:/usr/share/filebeat/filebeat.yml:ro
       - ./log2:/log
@@ -92,7 +92,7 @@ services:
 
   # Parse, filter and transform
   logstash:
-    image: docker.elastic.co/logstash/logstash:6.6.1
+    image: docker.elastic.co/logstash/logstash:7.7.0
     volumes:
       - ./cfg/logstash.conf:/config-dir/logstash.conf
     restart: always
@@ -107,7 +107,7 @@ services:
 ###### Storage and Search(Cluster)
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
     container_name: es1
     environment:
       http.host: 0.0.0.0
@@ -122,7 +122,7 @@ services:
       - 9200:9200
 
   kibana:
-    image: docker.elastic.co/kibana/kibana-oss:6.6.1
+    image: docker.elastic.co/kibana/kibana:7.7.0
     container_name: kibana
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
@@ -148,7 +148,7 @@ services:
       - 5601:5601
 
   elasticsearch-hq:
-    image: elastichq/elasticsearch-hq:release-v3.5.12
+    image: elastichq/elasticsearch-hq:latest
     container_name: elasticsearch-hq-330
     ports:
       - 5000:5000
